# ML-OPS-Automated-Pipeline-with-Dagster

./: .gitignore  README.md  pyproject.toml
ml_pipeline/: __init__.py
ml_pipeline/assets/: load_data.py
ml_pipeline/io_managers/: io_manager.py
ml_pipeline/utils/: utils.py
