[project]
name = "part3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.10.15",
    "dagster-webserver>=1.10.15",
    "joblib>=1.5.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]

[tool.dagster]
module_name = "ml_pipeline"
