[project]
name = "part3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.10.15",
    "dagster-webserver>=1.10.15",
    "joblib>=1.5.0",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=2.1.4",
]

[tool.dagster]
module_name = "ml_pipeline"
